--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link href="style/style.css" rel="stylesheet">
+    <script src="script/script.js"></script>
 </head>
 <body>
-    
+    <div id="bg">
+        <div id="main">
+            <div id="result">0</div>
+            <div id="buttons">
+                <div id="clearB" class="eqB">AC</div>
+                <div id="moduB" class="eqB">%</div>
+                <div id="poweB" class="eqB">^</div>
+                <div id="divB" class="eqB">/</div>
+                <div id="sevB" class="numB">7</div>
+                <div id="eigB" class="numB">8</div>
+                <div id="ninB" class="numB">9</div>
+                <div id="multB" class="eqB">*</div>
+                <div id="fourB" class="numB">4</div>
+                <div id="fiveB" class="numB">5</div>
+                <div id="sixB" class="numB">6</div>
+                <div id="minuB" class="eqB">-</div>
+                <div id="oneB" class="numB">1</div>
+                <div id="twoB" class="numB">2</div>
+                <div id="threB" class="numB">3</div>
+                <div id="plusB" class="eqB">+</div>
+                <div id="zeroB" class="numB">0</div>
+                <div id="decB" class="numB">.</div>
+                <div id="totB" class="eqB">=</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
